<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:orientation="vertical"
        tools:context="com.example.gauthama.emiandsmssync.ui.main.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopBig"
            android:text="@string/home_loan"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/loanTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="200L" />

        <SeekBar
            android:id="@+id/loanSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:max="200"
            android:progress="200" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/interest_rate"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/interestTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="20%" />

        <SeekBar
            android:id="@+id/interestSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"

            android:max="15"
            android:progress="15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/loan_tenure"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tenureTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="30yr" />

        <SeekBar
            android:id="@+id/tenureSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:max="29"
            android:progress="29" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/vertical_margin">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:text="@string/emi"
                    android:textSize="@dimen/text_small_body" />

                <TextView
                    android:id="@+id/emi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hello World!"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:text="@string/interest_payable"
                    android:textSize="@dimen/text_small_body" />

                <TextView
                    android:id="@+id/interest_payable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hello World!"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:text="@string/payment"
                    android:textSize="@dimen/text_small_body" />

                <TextView
                    android:id="@+id/payment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hello World!"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold"

                    />
            </LinearLayout>

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/piechart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>
